// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`tile 2/1/1 of seed 12345 stays the same 1`] = `
{
  "biomeIds": 1789090434,
  "debugColors": 519870909,
  "indices": 3061001994,
  "positions": 1058526066,
  "slopes": 3504375680,
  "triangles": 6145,
  "vertices": 7169,
}
`;

exports[`tile 2/1/1 of seed 12345 with water stays the same 1`] = `
{
  "biomeIds": 3466885186,
  "indices": 3061001994,
  "positions": 649129022,
  "riverIndices": 2078817536,
  "riverPositions": 312890516,
  "riverShapes": 4092497651,
  "riverTriangles": 1634,
  "slopes": 3504375680,
  "triangles": 6145,
  "vertices": 7169,
}
`;
